syntax = "proto3";

option go_package = "./proto";

package greet_service;

service greetService{
    rpc sayHello(NoParam) returns (HelloResponse); 
    rpc sayHelloServerStreaming(NamesList) returns (stream HelloResponse);
    rpc sayHelloClientStreaming(stream HelloRequest) returns (MessageList);
    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloRequest{
    string message = 1;
}

message HelloResponse{
    string message = 1;
}

message NamesList{
    repeated string message = 1;
}

message MessageList{
    repeated string message = 1;
}